handlers/token_collector/xasm/generated/xasm_singleParser.cpp

// Generated from xasm_single.g4 by ANTLR 4.8


#include "xasm_singleListener.h"
#include "xasm_singleVisitor.h"

#include "xasm_singleParser.h"


using namespace antlrcpp;
using namespace xasm;
using namespace antlr4;

xasm_singleParser::xasm_singleParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

xasm_singleParser::~xasm_singleParser() {
  delete _interpreter;
}

std::string xasm_singleParser::getGrammarFileName() const {
  return "xasm_single.g4";
}

const std::vector<std::string>& xasm_singleParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& xasm_singleParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- LineContext ------------------------------------------------------------------

xasm_singleParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

xasm_singleParser::StatementContext* xasm_singleParser::LineContext::statement() {
  return getRuleContext<xasm_singleParser::StatementContext>(0);
}

xasm_singleParser::CommentContext* xasm_singleParser::LineContext::comment() {
  return getRuleContext<xasm_singleParser::CommentContext>(0);
}


size_t xasm_singleParser::LineContext::getRuleIndex() const {
  return xasm_singleParser::RuleLine;
}

void xasm_singleParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void xasm_singleParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}


antlrcpp::Any xasm_singleParser::LineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitLine(this);
  else
    return visitor->visitChildren(this);
}

xasm_singleParser::LineContext* xasm_singleParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 0, xasm_singleParser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(28);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case xasm_singleParser::T__0:
      case xasm_singleParser::T__3:
      case xasm_singleParser::T__7:
      case xasm_singleParser::T__9:
      case xasm_singleParser::T__10:
      case xasm_singleParser::T__14:
      case xasm_singleParser::T__23:
      case xasm_singleParser::T__31:
      case xasm_singleParser::T__32:
      case xasm_singleParser::T__33:
      case xasm_singleParser::T__34:
      case xasm_singleParser::T__35:
      case xasm_singleParser::T__36:
      case xasm_singleParser::T__37:
      case xasm_singleParser::ID:
      case xasm_singleParser::REAL:
      case xasm_singleParser::INT:
      case xasm_singleParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(26);
        statement();
        break;
      }

      case xasm_singleParser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(27);
        comment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

xasm_singleParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

xasm_singleParser::QinstContext* xasm_singleParser::StatementContext::qinst() {
  return getRuleContext<xasm_singleParser::QinstContext>(0);
}

xasm_singleParser::CinstContext* xasm_singleParser::StatementContext::cinst() {
  return getRuleContext<xasm_singleParser::CinstContext>(0);
}


size_t xasm_singleParser::StatementContext::getRuleIndex() const {
  return xasm_singleParser::RuleStatement;
}

void xasm_singleParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void xasm_singleParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any xasm_singleParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

xasm_singleParser::StatementContext* xasm_singleParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, xasm_singleParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(32);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(30);
      qinst();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(31);
      cinst();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

xasm_singleParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* xasm_singleParser::CommentContext::COMMENT() {
  return getToken(xasm_singleParser::COMMENT, 0);
}


size_t xasm_singleParser::CommentContext::getRuleIndex() const {
  return xasm_singleParser::RuleComment;
}

void xasm_singleParser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void xasm_singleParser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}


antlrcpp::Any xasm_singleParser::CommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitComment(this);
  else
    return visitor->visitChildren(this);
}

xasm_singleParser::CommentContext* xasm_singleParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 4, xasm_singleParser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    match(xasm_singleParser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QinstContext ------------------------------------------------------------------

xasm_singleParser::QinstContext::QinstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

xasm_singleParser::ExplistContext* xasm_singleParser::QinstContext::explist() {
  return getRuleContext<xasm_singleParser::ExplistContext>(0);
}

xasm_singleParser::IdContext* xasm_singleParser::QinstContext::id() {
  return getRuleContext<xasm_singleParser::IdContext>(0);
}


size_t xasm_singleParser::QinstContext::getRuleIndex() const {
  return xasm_singleParser::RuleQinst;
}

void xasm_singleParser::QinstContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQinst(this);
}

void xasm_singleParser::QinstContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQinst(this);
}


antlrcpp::Any xasm_singleParser::QinstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitQinst(this);
  else
    return visitor->visitChildren(this);
}

xasm_singleParser::QinstContext* xasm_singleParser::qinst() {
  QinstContext *_localctx = _tracker.createInstance<QinstContext>(_ctx, getState());
  enterRule(_localctx, 6, xasm_singleParser::RuleQinst);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    dynamic_cast<QinstContext *>(_localctx)->inst_name = id();
    setState(37);
    match(xasm_singleParser::T__0);
    setState(38);
    explist();
    setState(39);
    match(xasm_singleParser::T__1);
    setState(40);
    match(xasm_singleParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CinstContext ------------------------------------------------------------------

xasm_singleParser::CinstContext::CinstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

xasm_singleParser::Cpp_typeContext* xasm_singleParser::CinstContext::cpp_type() {
  return getRuleContext<xasm_singleParser::Cpp_typeContext>(0);
}

std::vector<xasm_singleParser::ExpContext *> xasm_singleParser::CinstContext::exp() {
  return getRuleContexts<xasm_singleParser::ExpContext>();
}

xasm_singleParser::ExpContext* xasm_singleParser::CinstContext::exp(size_t i) {
  return getRuleContext<xasm_singleParser::ExpContext>(i);
}

xasm_singleParser::CompareContext* xasm_singleParser::CinstContext::compare() {
  return getRuleContext<xasm_singleParser::CompareContext>(0);
}

xasm_singleParser::ExplistContext* xasm_singleParser::CinstContext::explist() {
  return getRuleContext<xasm_singleParser::ExplistContext>(0);
}


size_t xasm_singleParser::CinstContext::getRuleIndex() const {
  return xasm_singleParser::RuleCinst;
}

void xasm_singleParser::CinstContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCinst(this);
}

void xasm_singleParser::CinstContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCinst(this);
}


antlrcpp::Any xasm_singleParser::CinstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitCinst(this);
  else
    return visitor->visitChildren(this);
}

xasm_singleParser::CinstContext* xasm_singleParser::cinst() {
  CinstContext *_localctx = _tracker.createInstance<CinstContext>(_ctx, getState());
  enterRule(_localctx, 8, xasm_singleParser::RuleCinst);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(117);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(43);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == xasm_singleParser::T__3) {
        setState(42);
        match(xasm_singleParser::T__3);
      }
      setState(45);
      dynamic_cast<CinstContext *>(_localctx)->type_name = cpp_type();
      setState(46);
      dynamic_cast<CinstContext *>(_localctx)->var_name = exp(0);
      setState(49);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == xasm_singleParser::T__4) {
        setState(47);
        match(xasm_singleParser::T__4);
        setState(48);
        dynamic_cast<CinstContext *>(_localctx)->var_value = exp(0);
      }
      setState(51);
      match(xasm_singleParser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(53);
      exp(0);
      setState(54);
      match(xasm_singleParser::T__5);
      setState(55);
      match(xasm_singleParser::T__2);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(57);
      exp(0);
      setState(58);
      match(xasm_singleParser::T__6);
      setState(59);
      match(xasm_singleParser::T__2);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(61);
      match(xasm_singleParser::T__7);
      setState(62);
      match(xasm_singleParser::T__0);
      setState(63);
      cpp_type();
      setState(64);
      exp(0);
      setState(65);
      match(xasm_singleParser::T__4);
      setState(66);
      exp(0);
      setState(67);
      match(xasm_singleParser::T__2);
      setState(72);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << xasm_singleParser::T__0)
        | (1ULL << xasm_singleParser::T__23)
        | (1ULL << xasm_singleParser::T__31)
        | (1ULL << xasm_singleParser::T__32)
        | (1ULL << xasm_singleParser::T__33)
        | (1ULL << xasm_singleParser::T__34)
        | (1ULL << xasm_singleParser::T__35)
        | (1ULL << xasm_singleParser::T__36)
        | (1ULL << xasm_singleParser::T__37)
        | (1ULL << xasm_singleParser::ID)
        | (1ULL << xasm_singleParser::REAL)
        | (1ULL << xasm_singleParser::INT)
        | (1ULL << xasm_singleParser::STRING))) != 0)) {
        setState(68);
        exp(0);
        setState(69);
        compare();
        setState(70);
        exp(0);
      }
      setState(74);
      match(xasm_singleParser::T__2);
      setState(80);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case xasm_singleParser::T__0:
        case xasm_singleParser::T__23:
        case xasm_singleParser::T__31:
        case xasm_singleParser::T__32:
        case xasm_singleParser::T__33:
        case xasm_singleParser::T__34:
        case xasm_singleParser::T__35:
        case xasm_singleParser::T__36:
        case xasm_singleParser::T__37:
        case xasm_singleParser::ID:
        case xasm_singleParser::REAL:
        case xasm_singleParser::INT:
        case xasm_singleParser::STRING: {
          setState(75);
          exp(0);
          setState(76);
          _la = _input->LA(1);
          if (!(_la == xasm_singleParser::T__5

          || _la == xasm_singleParser::T__6)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          break;
        }

        case xasm_singleParser::T__5:
        case xasm_singleParser::T__6: {
          setState(78);
          _la = _input->LA(1);
          if (!(_la == xasm_singleParser::T__5

          || _la == xasm_singleParser::T__6)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(79);
          exp(0);
          break;
        }

        case xasm_singleParser::T__1: {
          break;
        }

      default:
        break;
      }
      setState(82);
      match(xasm_singleParser::T__1);
      setState(84);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == xasm_singleParser::T__8) {
        setState(83);
        match(xasm_singleParser::T__8);
      }
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(86);
      match(xasm_singleParser::T__9);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(87);
      exp(0);
      setState(88);
      match(xasm_singleParser::T__0);
      setState(89);
      explist();
      setState(90);
      match(xasm_singleParser::T__1);
      setState(91);
      match(xasm_singleParser::T__2);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(93);
      match(xasm_singleParser::T__10);
      setState(94);
      match(xasm_singleParser::T__0);
      setState(95);
      explist();
      setState(96);
      match(xasm_singleParser::T__1);
      setState(98);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == xasm_singleParser::T__8) {
        setState(97);
        match(xasm_singleParser::T__8);
      }
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(101);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == xasm_singleParser::T__3) {
        setState(100);
        match(xasm_singleParser::T__3);
      }
      setState(103);
      dynamic_cast<CinstContext *>(_localctx)->type_name = cpp_type();
      setState(104);
      dynamic_cast<CinstContext *>(_localctx)->var_name = exp(0);
      setState(105);
      match(xasm_singleParser::T__4);
      setState(106);
      match(xasm_singleParser::T__0);
      setState(107);
      exp(0);
      setState(108);
      match(xasm_singleParser::T__11);
      setState(109);
      exp(0);
      setState(110);
      match(xasm_singleParser::T__1);
      setState(111);
      match(xasm_singleParser::T__12);
      setState(112);
      exp(0);
      setState(113);
      match(xasm_singleParser::T__13);
      setState(114);
      exp(0);
      setState(115);
      match(xasm_singleParser::T__2);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Cpp_typeContext ------------------------------------------------------------------

xasm_singleParser::Cpp_typeContext::Cpp_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

xasm_singleParser::ExpContext* xasm_singleParser::Cpp_typeContext::exp() {
  return getRuleContext<xasm_singleParser::ExpContext>(0);
}


size_t xasm_singleParser::Cpp_typeContext::getRuleIndex() const {
  return xasm_singleParser::RuleCpp_type;
}

void xasm_singleParser::Cpp_typeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCpp_type(this);
}

void xasm_singleParser::Cpp_typeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCpp_type(this);
}


antlrcpp::Any xasm_singleParser::Cpp_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitCpp_type(this);
  else
    return visitor->visitChildren(this);
}

xasm_singleParser::Cpp_typeContext* xasm_singleParser::cpp_type() {
  Cpp_typeContext *_localctx = _tracker.createInstance<Cpp_typeContext>(_ctx, getState());
  enterRule(_localctx, 10, xasm_singleParser::RuleCpp_type);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(124);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case xasm_singleParser::T__14: {
        enterOuterAlt(_localctx, 1);
        setState(119);
        match(xasm_singleParser::T__14);
        setState(121);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == xasm_singleParser::T__15

        || _la == xasm_singleParser::T__16) {
          setState(120);
          _la = _input->LA(1);
          if (!(_la == xasm_singleParser::T__15

          || _la == xasm_singleParser::T__16)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
        }
        break;
      }

      case xasm_singleParser::T__0:
      case xasm_singleParser::T__23:
      case xasm_singleParser::T__31:
      case xasm_singleParser::T__32:
      case xasm_singleParser::T__33:
      case xasm_singleParser::T__34:
      case xasm_singleParser::T__35:
      case xasm_singleParser::T__36:
      case xasm_singleParser::T__37:
      case xasm_singleParser::ID:
      case xasm_singleParser::REAL:
      case xasm_singleParser::INT:
      case xasm_singleParser::STRING: {
        enterOuterAlt(_localctx, 2);
        setState(123);
        exp(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompareContext ------------------------------------------------------------------

xasm_singleParser::CompareContext::CompareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t xasm_singleParser::CompareContext::getRuleIndex() const {
  return xasm_singleParser::RuleCompare;
}

void xasm_singleParser::CompareContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompare(this);
}

void xasm_singleParser::CompareContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompare(this);
}


antlrcpp::Any xasm_singleParser::CompareContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitCompare(this);
  else
    return visitor->visitChildren(this);
}

xasm_singleParser::CompareContext* xasm_singleParser::compare() {
  CompareContext *_localctx = _tracker.createInstance<CompareContext>(_ctx, getState());
  enterRule(_localctx, 12, xasm_singleParser::RuleCompare);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << xasm_singleParser::T__17)
      | (1ULL << xasm_singleParser::T__18)
      | (1ULL << xasm_singleParser::T__19)
      | (1ULL << xasm_singleParser::T__20))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExplistContext ------------------------------------------------------------------

xasm_singleParser::ExplistContext::ExplistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<xasm_singleParser::ExpContext *> xasm_singleParser::ExplistContext::exp() {
  return getRuleContexts<xasm_singleParser::ExpContext>();
}

xasm_singleParser::ExpContext* xasm_singleParser::ExplistContext::exp(size_t i) {
  return getRuleContext<xasm_singleParser::ExpContext>(i);
}


size_t xasm_singleParser::ExplistContext::getRuleIndex() const {
  return xasm_singleParser::RuleExplist;
}

void xasm_singleParser::ExplistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExplist(this);
}

void xasm_singleParser::ExplistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExplist(this);
}


antlrcpp::Any xasm_singleParser::ExplistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitExplist(this);
  else
    return visitor->visitChildren(this);
}

xasm_singleParser::ExplistContext* xasm_singleParser::explist() {
  ExplistContext *_localctx = _tracker.createInstance<ExplistContext>(_ctx, getState());
  enterRule(_localctx, 14, xasm_singleParser::RuleExplist);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    exp(0);
    setState(133);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == xasm_singleParser::T__21) {
      setState(129);
      match(xasm_singleParser::T__21);
      setState(130);
      exp(0);
      setState(135);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

xasm_singleParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

xasm_singleParser::IdContext* xasm_singleParser::ExpContext::id() {
  return getRuleContext<xasm_singleParser::IdContext>(0);
}

std::vector<xasm_singleParser::ExpContext *> xasm_singleParser::ExpContext::exp() {
  return getRuleContexts<xasm_singleParser::ExpContext>();
}

xasm_singleParser::ExpContext* xasm_singleParser::ExpContext::exp(size_t i) {
  return getRuleContext<xasm_singleParser::ExpContext>(i);
}

xasm_singleParser::UnaryopContext* xasm_singleParser::ExpContext::unaryop() {
  return getRuleContext<xasm_singleParser::UnaryopContext>(0);
}

xasm_singleParser::StringContext* xasm_singleParser::ExpContext::string() {
  return getRuleContext<xasm_singleParser::StringContext>(0);
}

xasm_singleParser::RealContext* xasm_singleParser::ExpContext::real() {
  return getRuleContext<xasm_singleParser::RealContext>(0);
}

tree::TerminalNode* xasm_singleParser::ExpContext::INT() {
  return getToken(xasm_singleParser::INT, 0);
}

xasm_singleParser::ExplistContext* xasm_singleParser::ExpContext::explist() {
  return getRuleContext<xasm_singleParser::ExplistContext>(0);
}


size_t xasm_singleParser::ExpContext::getRuleIndex() const {
  return xasm_singleParser::RuleExp;
}

void xasm_singleParser::ExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExp(this);
}

void xasm_singleParser::ExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<xasm_singleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExp(this);
}


antlrcpp::Any xasm_singleParser::ExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<xasm_singleVisitor*>(visitor))
    return parserVisitor->visitExp(this);
  else
    return visitor->visitChildren(this);
}


xasm_singleParser::ExpContext* xasm_singleParser::exp() {
   return exp(0);
}

xasm_singleParser::ExpContext* xasm_singleParser::exp(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  xasm_singleParser::ExpContext *_localctx = _tracker.createInstance<ExpContext>(_ctx, parentState);
  xasm_singleParser::ExpContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 16;
  enterRecursionRule(_localctx, 16, xasm_singleParser::RuleExp, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(153);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case xasm_singleParser::ID: {
        setState(137);
        id();
        break;
      }

      case xasm_singleParser::T__23: {
        setState(138);
        match(xasm_singleParser::T__23);
        setState(139);
        exp(9);
        break;
      }

      case xasm_singleParser::T__0: {
        setState(140);
        match(xasm_singleParser::T__0);
        setState(141);
        exp(0);
        setState(142);
        match(xasm_singleParser::T__1);
        break;
      }

      case xasm_singleParser::T__32:
      case xasm_singleParser::T__33:
      case xasm_singleParser::T__34:
      case xasm_singleParser::T__35:
      case xasm_singleParser::T__36:
      case xasm_singleParser::T__37: {
        setState(144);
        unaryop();
        setState(145);
        match(xasm_singleParser::T__0);
        setState(146);
        exp(0);
        setState(147);
        match(xasm_singleParser::T__1);
        break;
      }

      case xasm_singleParser::STRING: {
        setState(149);
        string();
        break;
      }

      case xasm_singleParser::REAL: {
        setState(150);
        real();
        break;
      }

      case xasm_singleParser::INT: {
        setState(151);
        match(xasm_singleParser::INT);
        break;
      }

      case xasm_singleParser::T__31: {
        setState(152);
        match(xasm_singleParser::T__31);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(208);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(206);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(155);

          if (!(precpred(_ctx, 19))) throw FailedPredicateException(this, "precpred(_ctx, 19)");
          setState(156);
          match(xasm_singleParser::T__22);
          setState(157);
          exp(20);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(158);

          if (!(precpred(_ctx, 18))) throw FailedPredicateException(this, "precpred(_ctx, 18)");
          setState(159);
          match(xasm_singleParser::T__23);
          setState(160);
          exp(19);
          break;
        }
